Thu Aug 25 08:19:43 2011  Koichi Sasada  <ko1@atdot.net>

	* vm.c (vm_make_env_each): work around to solve Bug #2729.
	  fixes: Bug #2729
	  a patch from Kazuki Tsujimoto <kazuki@callcc.net>
	  This problem is caused by changing dfp (dynamic env pointer)
	  from saved dfp.  Saved dfp is pointed env in VM stack.  However,
	  the dfp can be moved because VM copies env from VM stack to
	  the heap.  At this copying, dfp was also changed.  To solve this
	  problem, I'll try to change throw mechanism (not save target dfp,
	  but save target cfp).

	* bootstraptest/test_flow.rb: add a test for above.

Thu Aug 25 07:57:33 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* numeric.c (int_round): Fix Integer#round [ruby-core:39096]

Thu Aug 25 07:00:00 2011  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.h, vm_insnhelper.c, vm.c, vm_method.c, insns.def:
	  Manage a redefinition of special methods for each classes.
	  A patch from Joel Gouly <joel.gouly@gmail.com>.  Thanks!

Thu Aug 25 06:51:08 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych.rb: Fixing psych version number.
	* ext/psych/psych.gemspec: updating the gemspec.

Thu Aug 25 06:11:35 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/nodes/node.rb: default `to_yaml` encoding to be
	  UTF-8.
	* test/psych/test_encoding.rb: test yaml dump encoding.

Thu Aug 25 01:24:33 2011  Naohisa Goto  <ngotogenome@gmail.com>

	* test/fileutils/test_fileutils.rb (test_chmod_symbol_mode): Solaris
	  seems to behave the same as FreeBSD.

Thu Aug 25 01:11:36 2011  Naohisa Goto  <ngotogenome@gmail.com>

	* test/ruby/test_rubyoptions.rb (test_script_from_stdin): slave pty
	  should be manipulated because master pty may not be a tty on some
	  environment (e.g. Solaris). [Bug:#5222] [ruby-dev:44420]

Wed Aug 24 15:13:56 2011  Koichi Sasada  <ko1@atdot.net>

	* iseq.h, iseq.c, compile.c: Change the line number data structure