@@ -22,6 +22,17 @@ module OpenSSL
       alg += %w(SHA224 SHA256 SHA384 SHA512)
     end
 
+    # Return the +data+ hash computed with +name+ Digest. +name+ is either the
+    # long name or short name of a supported digest algorithm.
+    #
+    # === Examples
+    #
+    #   OpenSSL::Digest.digest("SHA256, "abc")
+    #
+    # which is equivalent to:
+    #
+    #   OpenSSL::Digest::SHA256.digest("abc")
+
     def self.digest(name, data)
         super(data, name)
     end
